objects/App_Setting__c.object
<CustomObject>
    <fields>
        <fullName>event_id__c</fullName>
        <label>event id</label>
        <referenceTo>BLN_Event__c</referenceTo>
        <relationshipName>app_settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>field_code__c</fullName>
        <label>field code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>field_value__c</fullName>
        <label>field value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>form_code__c</fullName>
        <label>form code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>BLN App Setting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>event_id__c</columns>
        <columns>field_code__c</columns>
        <columns>field_value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AS-{000000}</displayFormat>
        <label>App Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BLN App Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>